Add replay to closing 2021

--- a/src/site/2021-closing-ceremony.njk
+++ b/src/site/2021-closing-ceremony.njk
@@ -54,12 +54,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#CC1"
+                    data-item-id="#CCR1"
                     data-item-price="15"
                     data-item-url="/2021-closing-ceremony"
-                    data-item-description="2021 Closing Ceremony with Mhairi Todd"
+                    data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
                     data-item-image=""
-                    data-item-name="2021 Closing Ceremony">
+                    data-item-name="2021 Closing Ceremony - Replay">
                     Get your ticket
                 </button>
             </div>
@@ -104,12 +104,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#CC1"
+                data-item-id="#CCR1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
-                data-item-description="2021 Closing Ceremony with Mhairi Todd"
+                data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
                 data-item-image=""
-                data-item-name="2021 Closing Ceremony">
+                data-item-name="2021 Closing Ceremony - Replay">
                 Get your ticket
             </button>
         </div>
@@ -149,12 +149,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#CC1"
+                    data-item-id="#CCR1"
                     data-item-price="15"
                     data-item-url="/2021-closing-ceremony"
-                    data-item-description="2021 Closing Ceremony with Mhairi Todd"
+                    data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
                     data-item-image=""
-                    data-item-name="2021 Closing Ceremony">
+                    data-item-name="2021 Closing Ceremony - Replay">
                     Get your ticket                
                 </button>
             </div>
@@ -171,7 +171,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
             <div class="timer-container">
                 <div class="timer-digit-container">
                     <div class="timer-digit rob-font">
-                        <p id="timer-days" class="timer-text cw">
+                        <p id="timer-days" class="timer-text cw replay-avail">
 
                         </p>
                     </div>
@@ -213,12 +213,12 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#CC1"
+                data-item-id="#CCR1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
-                data-item-description="2021 Closing Ceremony with Mhairi Todd"
+                data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
                 data-item-image=""
-                data-item-name="2021 Closing Ceremony">
+                data-item-name="2021 Closing Ceremony - Replay">
                 Get your ticket
             </button>
         </div>
@@ -291,13 +291,13 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
     <section class="stand-alone-cta-btn">
         <div class="about-cta-btn max-content-width">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#CC1"
+                data-item-id="#CCR1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
-                data-item-description="2021 Closing Ceremony with Mhairi Todd"
+                data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
                 data-item-image=""
-                data-item-name="2021 Closing Ceremony">
-                JOIN ME FOR 2021 OPENING WORKSHOP 
+                data-item-name="2021 Closing Ceremony - Replay">
+                JOIN ME FOR 2021 CLOSING CEREMONY 
             </button>
         </div>
     </section>
