Change back id of CC1

--- a/src/site/2021-closing-ceremony.njk
+++ b/src/site/2021-closing-ceremony.njk
@@ -54,7 +54,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#CCR1"
+                    data-item-id="#CC1"
                     data-item-price="15"
                     data-item-url="/2021-closing-ceremony"
                     data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
@@ -104,7 +104,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#CCR1"
+                data-item-id="#CC1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
                 data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
@@ -149,7 +149,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#CCR1"
+                    data-item-id="#CC1"
                     data-item-price="15"
                     data-item-url="/2021-closing-ceremony"
                     data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
@@ -213,7 +213,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#CCR1"
+                data-item-id="#CC1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
                 data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
@@ -291,7 +291,7 @@ metaDescription: 'A soul soothing, spirit calming, path clearing workshop of joy
     <section class="stand-alone-cta-btn">
         <div class="about-cta-btn max-content-width">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#CCR1"
+                data-item-id="#CC1"
                 data-item-price="15"
                 data-item-url="/2021-closing-ceremony"
                 data-item-description="2021 Closing Ceremony with Mhairi Todd - Replay"
