--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -967,16 +967,16 @@
     @media #{$breakpoint-lg}{
         width: 100%;
         height: auto;
-        grid-template-columns: auto 14em 2em 14em 2em 14em auto;
+        grid-template-columns: auto 14em 3em 14em auto;
     }
     @media #{$breakpoint-xl}{
         width: 85%;
-        grid-template-columns: auto 14em 2em 14em 2em 14em auto;
+        grid-template-columns: auto 14em 3em 14em auto;
     }
     @media #{$breakpoint-xxl}{
         width: 85%;
         height: auto;
-        grid-template-columns: auto 14em 3em 14em 3em 14em auto;
+        grid-template-columns: auto 14em 4em 14em auto;
     }
 }
 
