--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -45,6 +45,7 @@
   'pages/testimonials',
   'pages/opening_workshop',
   'pages/cc_workshop',
+  'pages/as_workshop',
   'pages/being_enough',
   'pages/la_workshop',
   'pages/closing_ceremony';
