Set up as workshop email

--- a/src/site/authentic-self-confidence-workshop.njk
+++ b/src/site/authentic-self-confidence-workshop.njk
@@ -7,11 +7,11 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
 ---
 
     <!-- Parralex hero section -->
-    <section class="testimonial-hero-container cc-workshop-hero">
+    <section class="testimonial-hero-container as-workshop-hero">
         <div class="parallax-container contact-hero-parallax-window"></div>
-        <div class="right-hero-text">
-            <h1 class="sect-title">Authentic Self-Confidence</h1>
-            <h2 class="sect-subtitle"><i>The</i> Workshop With Mhairi Todd</h2>
+        <div class="left-hero-text">
+            <h1 class="sect-title"><i>The</i> Authentic Self-Confidence Workshop</h1>
+            <h2 class="sect-subtitle">With Mhairi Todd</h2>
         </div>
     </section>
     <!-- END: parralex hero section -->
@@ -46,12 +46,12 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#WS1"
+                    data-item-id="#ASC1"
                     data-item-price="15"
-                    data-item-url="/confidence-collective-workshop"
-                    data-item-description="Confidence Collective Workshop - Replay"
+                    data-item-url="/authentic-self-confidence-workshop"
+                    data-item-description="The Authentic Self-Confidence Workshop"
                     data-item-image=""
-                    data-item-name="Confidence Collective Workshop - Replay">
+                    data-item-name="The Authentic Self-Confidence Workshop">
                     Get your ticket
                 </button>
             </div>
@@ -100,12 +100,12 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#WS1"
+                data-item-id="#ASC1"
                 data-item-price="15"
-                data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop - Replay"
+                data-item-url="/authentic-self-confidence-workshop"
+                data-item-description="The Authentic Self-Confidence Workshop"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop - Replay">
+                data-item-name="The Authentic Self-Confidence Workshop">
                 Get your ticket
             </button>
         </div>
@@ -135,12 +135,12 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#WS1"
+                    data-item-id="#ASC1"
                     data-item-price="15"
-                    data-item-url="/confidence-collective-workshop"
-                    data-item-description="Confidence Collective Workshop - Replay"
+                    data-item-url="/authentic-self-confidence-workshop"
+                    data-item-description="The Authentic Self-Confidence Workshop"
                     data-item-image=""
-                    data-item-name="Confidence Collective Workshop - Replay">
+                    data-item-name="The Authentic Self-Confidence Workshop">
                     Get your ticket
                 </button>
             </div>
@@ -157,7 +157,7 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
             <div class="timer-container">
                 <div class="timer-digit-container">
                     <div class="timer-digit rob-font">
-                        <p id="timer-days" class="timer-text ccw replay-avail">
+                        <p id="timer-days" class="timer-text as">
 
                         </p>
                     </div>
@@ -199,12 +199,12 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#WS1"
+                data-item-id="#ASC1"
                 data-item-price="15"
-                data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop - Replay"
+                data-item-url="/authentic-self-confidence-workshop"
+                data-item-description="The Authentic Self-Confidence Workshop"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop - Replay">
+                data-item-name="The Authentic Self-Confidence Workshop">
                 Get your ticket
             </button>
         </div>
@@ -273,13 +273,13 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
     <section class="stand-alone-cta-btn">
         <div class="about-cta-btn max-content-width">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#WS1"
+                data-item-id="#ASC1"
                 data-item-price="15"
-                data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop - Replay"
+                data-item-url="/authentic-self-confidence-workshop"
+                data-item-description="The Authentic Self-Confidence Workshop"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop - Replay">
-                JOIN ME FOR THE CONFIDENCE COLLECTIVE WORKSHOP 
+                data-item-name="The Authentic Self-Confidence Workshop">
+                Get your ticket
             </button>
         </div>
     </section>
