--- a/static/scss/pages/_as_workshop.scss
+++ b/static/scss/pages/_as_workshop.scss
@@ -1,3 +1,18 @@
+.as-workshop-hero{
+    background-image: url(../img/Mhairi_pics/mhairi_lean_phone.jpeg);
+    background-position: 90% 40%;
+    background-attachment: scroll;
+    @media #{$breakpoint-min-md} {
+        background-position: 90% 0%;
+    }
+    
+    .parallax-container{
+        @media #{$breakpoint-min-lg} {
+            min-height: 22.5em;
+        }
+    }
+}
+
 .as-workshop-includes{
     @media #{$breakpoint-md} {
         height: 30.5em;
@@ -9,3 +24,4 @@
         height: 24.5em;
     }
 }
+
