Add changes from Mhairi to as workshop

--- a/src/site/authentic-self-confidence-workshop.njk
+++ b/src/site/authentic-self-confidence-workshop.njk
@@ -19,13 +19,13 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
         <div class="home-sub-hero-content ceremony-sub-content">
-            <h1 class="sect-title about-title pink-text">Join me to uncover personal empowerment that lasts</h1>
+            <h1 class="sect-title about-title pink-text">Uncover personal empowerment that lasts!</h1>
         </div>
         <hr class="half-width-hr">
         <div class="ceremony-what">
             <div class="ceremony-what-item">
                 <p class="normal-text">
-                   This 1hr lecture style workshop is guaranteed to lift your vibe, improve your self-confidence and raise your spirits.  Together we will supercharge your self-awareness so you experience personal empowerment like never before.  
+                   This 1hr lecture style workshop is guaranteed to raise your vibe and supercharge your self-confidence.  Together we will power up your self-awareness so you experience personal empowerment like never before.   
                 </p>
             </div>
             <div class="ceremony-what-item">
@@ -72,7 +72,7 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
-                A lack of self-confidence can be crippling, perhaps even more so when it’s hidden from others.  Before I found my way to unshakeable self-confidence I would be surprised as people would compliment me on my confidence quickly followed by fear of being ‘found out’ as I knew deep down it was all just a façade.
+                A lack of self-confidence can be crippling, perhaps even more so when it’s hidden from others.  Before I found my way to unshakeable self-confidence, I would be taken aback when people would compliment me on my confident presentation or confident handling of a situation.  This shock would be instantly followed by fear as I knew deep down it was all just a façade.
             </p>
             <p class="normal-text">
                Low self-confidence can hold you back from taking action, dampen your experiences/successes and ultimately steal your joy.
@@ -120,7 +120,7 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
             </div>
             <div class="why-mhairi-title pl-md-0">
                 <h3 class="home-about-subtitle fw-b">
-                    HI, MY NAME IS MHAIRI TODD AND I HAVEN’T ALWAYS BEEN CONFIDENT 
+                    HI MY NAME IS MHAIRI TODD AND I HAVEN’T ALWAYS BEEN AUTHENTICALLY CONFIDENT
                 </h3>
             </div>
             <div class="home-about-text pl-md-0">
@@ -151,7 +151,7 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
     <!-- countdown timer section -->
     <section class="simple-section bg-aqua">
         <h2 class="sect-title">
-            JOIN ME FOR THE CONFIDENCE COLLECTIVE WORKSHOP 
+            JOIN ME FOR THE authentic SELF-CONFIDENCE WORKSHOP
         </h2>
         <div class="simple-section-text">
             <div class="timer-container">
