Chnage wording in what of as workshop

--- a/src/site/authentic-self-confidence-workshop.njk
+++ b/src/site/authentic-self-confidence-workshop.njk
@@ -25,7 +25,7 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
         <div class="ceremony-what">
             <div class="ceremony-what-item">
                 <p class="normal-text">
-                   This 1hr lecture style workshop is guaranteed to raise your vibe and supercharge your self-confidence.  Together we will power up your self-awareness so you experience personal empowerment like never before.   
+                   This 1hr lecture style workshop is guaranteed to raise your vibe and supercharge your self-confidence.  Together we will advance your self-awareness so you experience personal empowerment like never before.    
                 </p>
             </div>
             <div class="ceremony-what-item">
