Add more minor changes to text of as workshop

--- a/src/site/authentic-self-confidence-workshop.njk
+++ b/src/site/authentic-self-confidence-workshop.njk
@@ -75,7 +75,7 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
                 A lack of self-confidence can be crippling, perhaps even more so when it’s hidden from others.  Before I found my way to unshakeable self-confidence, I would be taken aback when people would compliment me on my confident presentation or confident handling of a situation.  This shock would be instantly followed by fear as I knew deep down it was all just a façade.
             </p>
             <p class="normal-text">
-               Low self-confidence can hold you back from taking action, dampen your experiences/successes and ultimately steal your joy.
+               Low self-confidence can hold you back from taking action, dampen your successes and ultimately steal your joy.
             </p>
             <p class="normal-text">
                Whilst you may worry it’s only you that feels a lack of confidence, there are some staggering statistics which show low self-confidence is sadly prolific, particularly in women.
