add as workshop into nav

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -64,13 +64,16 @@
                     <a href="#" class="dropdown-toggle nav-item rob-font" data-toggle="dropdown">Events</a>
                     <div class="dropdown-menu nav-item rob-font">
                         <div class="dropdown-item">
+                                <a href="/authentic-self-confidence-workshop" class="">The Authentic Self-Confidence<br class="d-md-none"> Workshop</a>
+                        </div>
+                        <div class="dropdown-item">
                                 <a href="/2021-closing-ceremony" class="">2021 Closing Ceremony</a>
                         </div>
                         <div class="dropdown-item">
-                            <a href="/business-workshops/limitless-abundance" class="">Limitless Abundance <br class="d-lg-none"> Workshop</a>
+                            <a href="/business-workshops/limitless-abundance" class="">Limitless Abundance <br class="d-md-none"> Workshop</a>
                         </div>
                         <div class="dropdown-item">
-                            <a href="/confidence-collective-workshop" class="">Confidence Collective <br class="d-lg-none"> Workshop</a>
+                            <a href="/confidence-collective-workshop" class="">Confidence Collective <br class="d-md-none"> Workshop</a>
                         </div>
                         <div class="dropdown-item">
                             <a href="/opening-workshop" class="">2021 Opening Workshop</a>
