Add auth conf replay

--- a/src/site/authentic-self-confidence-workshop.njk
+++ b/src/site/authentic-self-confidence-workshop.njk
@@ -49,9 +49,9 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
                     data-item-id="#ASC1"
                     data-item-price="15"
                     data-item-url="/authentic-self-confidence-workshop"
-                    data-item-description="The Authentic Self-Confidence Workshop"
+                    data-item-description="The Authentic Self-Confidence Workshop - Replay"
                     data-item-image=""
-                    data-item-name="The Authentic Self-Confidence Workshop">
+                    data-item-name="The Authentic Self-Confidence Workshop - Replay">
                     Get your ticket
                 </button>
             </div>
@@ -103,9 +103,9 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
                 data-item-id="#ASC1"
                 data-item-price="15"
                 data-item-url="/authentic-self-confidence-workshop"
-                data-item-description="The Authentic Self-Confidence Workshop"
+                data-item-description="The Authentic Self-Confidence Workshop - Replay"
                 data-item-image=""
-                data-item-name="The Authentic Self-Confidence Workshop">
+                data-item-name="The Authentic Self-Confidence Workshop - Replay">
                 Get your ticket
             </button>
         </div>
@@ -138,9 +138,9 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
                     data-item-id="#ASC1"
                     data-item-price="15"
                     data-item-url="/authentic-self-confidence-workshop"
-                    data-item-description="The Authentic Self-Confidence Workshop"
+                    data-item-description="The Authentic Self-Confidence Workshop - Replay"
                     data-item-image=""
-                    data-item-name="The Authentic Self-Confidence Workshop">
+                    data-item-name="The Authentic Self-Confidence Workshop - Replay">
                     Get your ticket
                 </button>
             </div>
@@ -157,7 +157,7 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
             <div class="timer-container">
                 <div class="timer-digit-container">
                     <div class="timer-digit rob-font">
-                        <p id="timer-days" class="timer-text as">
+                        <p id="timer-days" class="timer-text as replay-avail">
 
                         </p>
                     </div>
@@ -202,9 +202,9 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
                 data-item-id="#ASC1"
                 data-item-price="15"
                 data-item-url="/authentic-self-confidence-workshop"
-                data-item-description="The Authentic Self-Confidence Workshop"
+                data-item-description="The Authentic Self-Confidence Workshop - Replay"
                 data-item-image=""
-                data-item-name="The Authentic Self-Confidence Workshop">
+                data-item-name="The Authentic Self-Confidence Workshop - Replay">
                 Get your ticket
             </button>
         </div>
@@ -276,9 +276,9 @@ metaDescription: 'This 1hr lecture style workshop is guaranteed to lift your vib
                 data-item-id="#ASC1"
                 data-item-price="15"
                 data-item-url="/authentic-self-confidence-workshop"
-                data-item-description="The Authentic Self-Confidence Workshop"
+                data-item-description="The Authentic Self-Confidence Workshop - Replay"
                 data-item-image=""
-                data-item-name="The Authentic Self-Confidence Workshop">
+                data-item-name="The Authentic Self-Confidence Workshop - Replay">
                 Get your ticket
             </button>
         </div>
