--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -48,6 +48,7 @@
   'pages/as_workshop',
   'pages/being_enough',
   'pages/la_workshop',
+  'pages/boundaries',
   'pages/closing_ceremony';
 
 // 7. Themes
