--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -76,7 +76,7 @@
                             <a href="/confidence-collective-workshop" class="">Confidence Collective <br class="d-md-none"> Workshop</a>
                         </div>
                         <div class="dropdown-item">
-                            <a href="/opening-workshop" class="">2021 Opening Workshop</a>
+                            <a href="/boundaries-for-people-pleasers" class="">Boundaries for People Pleasers</a>
                         </div>
                     </div>
                 </div>
