--- a/src/site/boundaries-for-people-pleasers.njk
+++ b/src/site/boundaries-for-people-pleasers.njk
@@ -19,7 +19,7 @@ metaDescription: 'In just over an 1hr in this lecture style workshop we will unc
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
         <div class="home-sub-hero-content ceremony-sub-content">
-            <h1 class="sect-title about-title pink-text">The workshop for People Pleasers</h1>
+            <h1 class="sect-title about-title pink-text"><i>The</i> workshop for People Pleasers</h1>
         </div>
         <hr class="half-width-hr">
         <div class="ceremony-what">
@@ -28,7 +28,7 @@ metaDescription: 'In just over an 1hr in this lecture style workshop we will unc
                     What
                 </h4>
                 <p class="normal-text">
-                   In just over an 1hr in this lecture style workshop we will uncover which type of people pleasing shows up for you and why.  With this knowledge we will dive into a proven strategy for setting boundaries that will positively impact your life in all the right ways for you.
+                   In just over an 1hr in this lecture style workshop we will uncover which type of people pleasing shows up for you and why.  With this knowledge we will dive into a proven strategy for setting boundaries that will positively impact your life in all the right ways.
                 </p>
             </div>
             <div class="ceremony-what-item">
@@ -153,7 +153,7 @@ metaDescription: 'In just over an 1hr in this lecture style workshop we will unc
     <!-- countdown timer section -->
     <section class="simple-section bg-aqua">
         <h2 class="sect-title">
-            JOIN ME FOR THE BOUNDARIES FOR PEOPLE PLEASERS WORKSHOP 
+            JOIN ME
         </h2>
         <div class="simple-section-text">
             <div class="timer-container">
@@ -280,7 +280,7 @@ metaDescription: 'In just over an 1hr in this lecture style workshop we will unc
                 data-item-description="How to stop caring what others think and set boundaries that work"
                 data-item-image=""
                 data-item-name="How to stop caring what others think and set boundaries that work">
-                JOIN ME FOR THE BOUNDARIES FOR PEOPLE PLEASERS WORKSHOP 
+                JOIN ME
             </button>
         </div>
     </section>
