--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11081,16 +11081,16 @@ input[type='checkbox'] {
   .signature-content {
     width: 100%;
     height: auto;
-    -ms-grid-columns: auto 14em 3em 14em auto;
-        grid-template-columns: auto 14em 3em 14em auto;
+    -ms-grid-columns: auto 14em 3em 14em 3em 14em auto;
+        grid-template-columns: auto 14em 3em 14em 3em 14em auto;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .signature-content {
     width: 85%;
-    -ms-grid-columns: auto 14em 3em 14em auto;
-        grid-template-columns: auto 14em 3em 14em auto;
+    -ms-grid-columns: auto 14em 3em 14em 3em 14em auto;
+        grid-template-columns: auto 14em 3em 14em 3em 14em auto;
   }
 }
 
@@ -11098,8 +11098,8 @@ input[type='checkbox'] {
   .signature-content {
     width: 85%;
     height: auto;
-    -ms-grid-columns: auto 14em 4em 14em auto;
-        grid-template-columns: auto 14em 4em 14em auto;
+    -ms-grid-columns: auto 14em 3em 14em 3em 14em auto;
+        grid-template-columns: auto 14em 3em 14em 3em 14em auto;
   }
 }
 
@@ -11162,25 +11162,25 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .coaching-package-intro {
     margin-bottom: 0;
-    height: 8em;
+    height: auto;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .coaching-package-intro {
-    height: 10em;
+    height: auto;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .coaching-package-intro {
-    height: 9em;
+    height: auto;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .coaching-package-intro {
-    height: 9em;
+    height: auto;
   }
 }
 
