Chnage in person intensive to one line

--- a/src/site/services-edit.njk
+++ b/src/site/services-edit.njk
@@ -210,7 +210,7 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
             <div class="coaching-package-item">
                 <div class="signature-includes">
                     <h2 class="sect-title fw-n signature-title italic">
-                        Shift <span class="small">(in person intensive)</span>
+                        Shift <span class="small services-small">in person intensive</span>
                     </h2>
                     <p class="normal-text coaching-package-intro">
                         If you want incredible accelerated progress and are ready to make a leap then meet SHIFT.  This unique program includes a face to face intensive with yours truly in the stunning city of Edinburgh.  I take care of your travel and refreshments because making radical changes in your life should also be boujee!   
